--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ profile.cov
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+backend/vendor/
 
 # Go workspace file
 go.work
@@ -26,7 +27,53 @@ go.work.sum
 
 # env file
 .env
+backend/.env
+
+# Database
+data/
+*.db
+*.db-journal
+*.db-wal
+*.db-shm
 
 # Editor/IDE
-# .idea/
-# .vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Frontend - Node.js
+frontend/node_modules/
+frontend/dist-ssr/
+frontend/.local
+frontend/.cache
+*.log
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
+frontend/pnpm-debug.log*
+
+# Frontend - Build
+frontend/dist/
+frontend/.vite-ssr-dist/
+frontend/stats.html
+
+# Temporary files
+*.tmp
+*.temp
+.tmp/
+tmp/
+
+# Air live reload
+backend/tmp/
+
+# OS files
+Thumbs.db
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Local environment
+.env.local
+.env.*.local
