feat: update launch configurations and backend build settings; add API proxy rewrites for development

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,27 +2,21 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Launch Backend",
-      "type": "go",
+      "name": "Launch Backend (Air)",
+      "type": "node-terminal",
       "request": "launch",
-      "mode": "auto",
-      "program": "${workspaceFolder}/backend/cmd/api/main.go",
-      "envFile": "${workspaceFolder}/backend/.env",
+      "command": "air",
       "cwd": "${workspaceFolder}/backend"
-    },
-    {
-      "name": "Attach Backend",
-      "type": "go",
-      "request": "attach",
-      "mode": "local",
-      "processId": 0
     },
     {
       "name": "Launch Frontend (Dev)",
       "type": "node",
       "request": "launch",
       "runtimeExecutable": "npm",
-      "runtimeArgs": ["run", "dev"],
+      "runtimeArgs": [
+        "run",
+        "dev"
+      ],
       "cwd": "${workspaceFolder}/frontend",
       "env": {
         "NODE_ENV": "development"
@@ -33,17 +27,7 @@
       "name": "Debug Frontend (Chrome)",
       "type": "chrome",
       "request": "launch",
-      "url": "http://localhost:5173",
-      "webRoot": "${workspaceFolder}/frontend/src",
-      "sourceMapPathOverrides": {
-        "webpack:///src/*": "${webRoot}/*"
-      }
-    },
-    {
-      "name": "Debug Frontend (Edge)",
-      "type": "msedge",
-      "request": "launch",
-      "url": "http://localhost:5173",
+      "url": "http://localhost:3000",
       "webRoot": "${workspaceFolder}/frontend/src",
       "sourceMapPathOverrides": {
         "webpack:///src/*": "${webRoot}/*"
@@ -53,8 +37,11 @@
   "compounds": [
     {
       "name": "Debug Full Stack",
-      "configurations": ["Launch Backend", "Launch Frontend (Dev)"],
-      "preLaunchTask": "npm: build",
+      "configurations": [
+        "Launch Backend (Air)",
+        "Launch Frontend (Dev)",
+        "Debug Frontend (Chrome)"
+      ],
       "stopAll": true
     }
   ]
