--- a/backend/.air.toml
+++ b/backend/.air.toml
@@ -4,8 +4,8 @@ tmp_dir = "tmp"
 
 [build]
   args_bin = []
-  bin = "./tmp/api"
-  cmd = "go build -o ./tmp/api cmd/api/main.go"
+  bin = "./tmp/api.exe"
+  cmd = "go build -o ./tmp/api.exe cmd/api/main.go"
   delay = 1000
   exclude_dir = ["assets", "tmp", "vendor", "testdata"]
   exclude_file = []
