--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,13 +2,11 @@
   "recommendations": [
     "golang.Go",
     "bradlc.vscode-tailwindcss",
-    "vue.volar",
-    "dbaeumer.vscode-eslint",
-    "esbenp.prettier-vscode",
+    "biomejs.biome",
     "ms-vscode.vscode-typescript-next",
-    "antfu.unocss",
     "formulahendry.auto-close-tag",
     "formulahendry.auto-rename-tag",
-    "ms-azuretools.vscode-docker"
+    "ms-azuretools.vscode-docker",
+    "tamasfe.even-better-toml"
   ]
 }
