--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,8 +17,11 @@ OIDC_PROVIDER_NAME=Pocket ID
 OIDC_ISSUER_URL=https://pocketid.example.com
 OIDC_CLIENT_ID=your-client-id
 OIDC_CLIENT_SECRET=your-client-secret
-OIDC_REDIRECT_URL=http://localhost:8080/api/auth/oidc/callback
+OIDC_REDIRECT_URL=http://localhost:3000/auth/oidc/callback
 OIDC_SCOPES=openid,profile,email
+OIDC_AUTH_URL=https://pocketid.example.com/authorize
+OIDC_TOKEN_URL=https://pocketid.example.com/api/oidc/token
+OIDC_USER_INFO_URL=https://pocketid.example.com/api/oidc/userinfo
 
 # CORS (for development)
 CORS_ALLOWED_ORIGINS=http://localhost:5173,http://localhost:8080
